@@ -185,6 +185,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 13727) Don't delete log entries from recentchanges on page deletion
 * (bug 13752) Section redirects now works again
 * (bug 13725) Upload form watch checkbox state set correctly with wpDestFile
+* (bug 13756) Don't show the form and navigation links of Special:Newpages if
+  the page is included
 
 
 === API changes in 1.13 ===
